[tool.poetry]
name = "gradio-chat"
version = "0.1.0"
description = ""
authors = ["Edgar Ortega <edgarortegaramirez@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.32.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
